# fakturoid-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  context7.json  pyproject.toml
.github/workflows/: ci.yml  publish-test.yml  publish.yml
src/fakturoid_sdk/: __init__.py  client.py  dispatcher.py  enums.py  exceptions.py  response.py  types.py
src/fakturoid_sdk/auth/: __init__.py  models.py  provider.py
src/fakturoid_sdk/models/: __init__.py  base.py  expense.py  invoice.py  subject.py
src/fakturoid_sdk/providers/: __init__.py  account.py  bank_accounts.py  base.py  events.py  expenses.py  generators.py  inbox_files.py  inventory_items.py  inventory_moves.py  invoices.py  number_formats.py  recurring_generators.py  subjects.py  todos.py  users.py  webhooks.py
src/fakturoid_sdk/resources/: __init__.py  account.py  bank_accounts.py  base.py  events.py  expenses.py  generators.py  inbox_files.py  inventory_items.py  inventory_moves.py  invoices.py  number_formats.py  recurring_generators.py  subjects.py  todos.py  users.py  webhooks.py
tests/: test_auth_provider.py  test_credentials.py  test_dispatcher.py  test_models_invoice.py  test_new_features.py  test_providers_account.py  test_providers_bank_accounts.py  test_providers_events.py  test_providers_expenses.py  test_providers_generators.py  test_providers_inbox_files.py  test_providers_inventory_items.py  test_providers_inventory_moves.py  test_providers_invoices.py  test_providers_number_formats.py  test_providers_recurring_generators.py  test_providers_subjects.py  test_providers_todos.py  test_providers_users.py  test_providers_webhooks.py  test_pythonic_client_invoices.py  test_pythonic_client_pythonic_layer.py  test_request_exceptions.py  test_response.py  test_sdk_hardening.py
