[project]
name = "fakturoid-sdk"
version = "0.1.0"
description = "Modern Python SDK for the Fakturoid API (port of the official PHP SDK)"
readme = "README.md"
authors = [
    { name = "Aleksandr Shabelnikov", email = "mistermidi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
pretty = true
mypy_path = ["src"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "types-requests>=2.33.0.20260408",
]
