[project]
name = "fakturoid-sdk"
version = "0.2.0"
description = "Modern Python SDK for the Fakturoid API (port of the official PHP SDK)"
readme = "README.md"
authors = [
    { name = "Aleksandr Shabelnikov", email = "mistermidi@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["fakturoid", "api", "sdk", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
]

[project.urls]
Repository = "https://github.com/mrmidi/fakturoid-sdk"
Issues = "https://github.com/mrmidi/fakturoid-sdk/issues"


[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
pretty = true
mypy_path = ["src"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "types-requests>=2.33.0.20260408",
]
